# rpi-photobooth

./: .flake8  .gitignore  .isort.cfg  .travis.yml  README.md  auto-format.sh  checks.sh  default-config.cfg  photobooth.cfg  photobooth.desktop  photobooth.service  pyproject.toml  rpi-install.sh  simon.cfg
photobooth/: __main__.py  camera.py  image_formatter.py  main.py  main_controller.py  main_window.py  mask.py  printer.py  rpi_io.py  state.py  uic.py  utils.py
photobooth/resources/: __init__.py
photobooth/resources/stylesheets/: 1366x768.qss  1920x1080.qss  800x480.qss  jungle.qss  main.qss
photobooth/resources/ui/: error.ui  idle.ui  preview.ui  printing.ui
photobooth/ui/: error_widget.py  idle_widget.py  main_window.py  preview_widget.py  printing_widget.py
photobooth/widgets/: base_widget.py  error_widget.py  grid_layout_helper.py  idle_widget.py  live_feed_widget.py  main_window.py  overlay_text_graphics_scene.py  pixmap_qlabel.py  preview_widget.py  printing_widget.py  static_image_widget.py
