[tool.poetry]
name = "photobooth"
version = "0.1.0"
description = ""
authors = ["SimonStJG <Simon.StJG@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7.5"
PyQt5 = "^5.14.2"
more-itertools = "^8.2.0"

[tool.poetry.dev-dependencies]
isort = "^4.3.21"
pytest = "^5.4.1"
black = "^19.10b0"
flake8-black = "^0.1.1"
flake8 = "^3.7.9"

[tool.poetry.scripts]
photobooth = 'photobooth.main:main'

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
