[tool.poetry]
name = "photobooth"
version = "0.1.0"
description = "Simple photobooth for Raspberry Pi"
authors = ["SimonStJG <Simon.StJG@gmail.com>"]
license = "GPL-3.0-or-later"
homepage = "https://github.com/SimonStJG/rpi-photobooth"
repository = "https://github.com/SimonStJG/rpi-photobooth.git"

[tool.poetry.dependencies]
python = "^3.7.3"
PyQt5 = "^5.14.2"
more-itertools = "^8.2.0"
pycups = "^1.9.74"
gpiozero = "^1.5.1"

[tool.poetry.dev-dependencies]
isort = "^4.3.21"
black = "^19.10b0"
flake8-black = "^0.1.1"
flake8 = "^3.7.9"

[tool.poetry.scripts]
photobooth = 'photobooth.main:main'

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
